small fix to portfolio, cards were being cut off by footer

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -205,6 +205,7 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 20px;
+  margin-bottom: 100px;
 }
 
 .project-card {
